test/SemanticAnalysis/Class/StaticMethodInvalidTemplateArgCount.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	template <typename A, typename B>
	static void method() { }
}

export void f() {
	// CHECK: .loci:11:2: error: incorrect number of template arguments provided for function or type 'TestClass::method'; 2 were required, but 0 were provided
	TestClass::method();
	
	// CHECK: .loci:14:2: error: incorrect number of template arguments provided for function or type 'TestClass::method'; 2 were required, but 1 were provided
	TestClass::method<int>();
	
	TestClass::method<int, int>();
	
	// CHECK: .loci:19:2: error: incorrect number of template arguments provided for function or type 'TestClass::method'; 2 were required, but 3 were provided
	TestClass::method<int, int, int>();
}

// CHECK: 3 errors generated.
